--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,3 +371,6 @@ button[type="submit"] {
         max-width: 50%;
     }
 }
+
+/* ----------------------------------------maps */
+div#map {min-height: 360px;}
